// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type No 1`] = `
.c0 {
  background-color: #eeedea;
  height: 78px;
  border: none;
  font-family: MuseoSans;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-align: center;
  width: 85px;
  margin-right: 7px;
  border-radius: 5px;
  font-size: 26px;
}

.c0,
.c0:after {
  content: 'No';
}

<button
  className="c0"
  type="No"
>
  No
</button>
`;

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type Not sure 1`] = `
.c0 {
  background-color: #eeedea;
  height: 78px;
  border: none;
  font-family: MuseoSans;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-align: center;
  width: 105px;
  margin-right: 0;
  border-radius: 5px;
  font-size: 26px;
}

.c0,
.c0:after {
  content: 'Not sure';
}

<button
  className="c0"
  type="Not sure"
>
  Not sure
</button>
`;

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type Yes 1`] = `
.c0 {
  background-color: #eeedea;
  height: 78px;
  border: none;
  font-family: MuseoSans;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-align: center;
  width: 85px;
  margin-right: 7px;
  border-radius: 5px;
  font-size: 26px;
}

.c0,
.c0:after {
  content: 'Yes';
}

<button
  className="c0"
  type="Yes"
>
  Yes
</button>
`;
